--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="stylesheet" href="css/bootstrap-grid.min.css">
+<link rel="shortcut icon" href="/img/shortcut_icon.png">
+<link rel="stylesheet" href="/css/bootstrap-grid.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
 <link rel="stylesheet" href="css/style.css">
-<title>Title</title>
+<title>Добрый картон</title>
 </head>
 <body>
-
+<header class="header">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-4">
+                <a href="#" class="header-logo">
+                    <img src="/img/header_logo.png" alt="Добрый картон">
+                </a>
+            </div>
+            <div class="col-8">
+                <div class="header-contacts">
+                    <a href="tel:83472715428" class="header-contacts__phone header-contacts__phone-border-right">8 (347) 271-54-28</a>
+                    <a href="tel:89373633000" class="header-contacts__phone">8 (937) 363-30-00</a>
+                    <button class="header-contacts__button button">
+                        <img src="img/phone_icon.png" alt="Телефон">
+                        Заказать звонок
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
 
 </body>
 </html>
