--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <div class="row align-items-center">
             <div class="col-4">
                 <a href="#" class="header-logo">
-                    <img src="/img/header_logo.png" alt="Добрый картон">
+                    <img src="/img/header/header_logo.png" alt="Добрый картон">
                 </a>
             </div>
             <div class="col-8">
                 <div class="header-contacts">
-                    <a href="tel:83472715428" class="header-contacts__phone header-contacts__phone-border-right">8 (347) 271-54-28</a>
+                    <a href="tel:83472715428" class="header-contacts__phone">8 (347) 271-54-28</a>
                     <a href="tel:89373633000" class="header-contacts__phone">8 (937) 363-30-00</a>
                     <button class="header-contacts__button button">
-                        <img src="img/phone_icon.png" alt="Телефон">
+                        <img src="img/header/phone_icon.png" alt="Телефон">
                         Заказать звонок
                     </button>
                 </div>
@@ -32,6 +32,30 @@
         </div>
     </div>
 </header>
-
+<section class="main">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-5">
+                <div class="main-img">
+                        <img src="/img/main/main-img.png" alt="Картон">
+                </div>
+                <!-- /.main-img -->
+        </div>
+        <div class="col-7">
+            <div class="main-text">
+                <h1 class="main-text__title">Производство упаковки из гофрокартона</h1>
+                <!-- /.main-text__title -->
+                <div class="main-text__subtitle">с доставкой по всей России</div>
+                <!-- /.main-text__subtitle -->
+                <div class="main-text__form">
+                    <!-- Тут будет форма -->
+                </div>
+                <!-- /.main-text__form -->
+            </div>
+            <!-- /.main-text -->
+        </div>
+        </div> 
+    </div>
+</section>
 </body>
 </html>
