--- a/index.html
+++ b/index.html
@@ -48,7 +48,17 @@
                 <div class="main-text__subtitle">с доставкой по всей России</div>
                 <!-- /.main-text__subtitle -->
                 <div class="main-text__form">
-                    <!-- Тут будет форма -->
+                    <div class="form-title">
+                        Получите индивидуальное предложение
+                        на производство и поставку гофропродукции
+                        <span class="form-title__important">Образцы упаковки бесплатно!</span>
+                    </div> 
+                    <!-- /.form title -->
+                    <form action="#" class="form">
+                        <input class="form__input" type="tel" placeholder="Введите номер телефона">
+                        <button class="button button_big" type="submit">Оставить заявку!</button>
+                    </form>
+                    <small class="form-small">* Минимальный заказ 500шт</small>
                 </div>
                 <!-- /.main-text__form -->
             </div>
